Added expanded views for stories

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -21,7 +21,7 @@
 </div>
 
 <div id="wrapper">
-	<h1>Polaris</h1>
+	<h1><span class="editable" title="Click to edit">Polaris</span></h1>
 	
 	<div id="nav">
 		<ul>
@@ -36,13 +36,130 @@
 			<h2>Stories</h2>
 			
 			<ul>
-				<li><a href="">Add new</a></li>
+				<li><a href="">Add new story</a></li>
 				<li><a href="">Browse by tags</a></li>
 			</ul>
 		</div>
 		
 		<div id="content-wrapper">
-			<p>Welcome to the Widget HDTV Community! Our discussion forums are filled with thousands of Widget HDTV owners from around the world. Search for an answer, post your question, or answer other users' questions in the Widget Community. If you need help using this community, check out the Help section.</p>
+			<div id="sprint-stories">
+				<div class="module">
+					<div class="module-header">
+						<h3>This Sprint</h3>
+						
+						<ul>
+							<li><a href="">Sprint settings</a></li>
+						</ul>
+					</div>
+				
+					<div class="story">
+						<div class="meta">
+							<ul>
+								<li class="priority"><a href="">11</a></li>
+								<li><a href="">Accept</a></li>
+							</ul>
+						</div>
+						
+						<div class="description">
+							<div class="title">
+								<h4 class="medium"><span class="editable" title="Click to edit">Login page needs remember me box</span></h4>
+							</div>
+							
+							<div class="details">
+								<ul>
+									<li><a href="" title="View stories for @gonzalocasas">@gonzalocasas</a> <a href="" title="View stories tagged as 'interface'">#interface</a> <a href="" title="View stories tagged as 'design'">#design</a> <a href="" title="View stories tagged as 'layout'">#layout</a> <a href="" class="quick-edit" title="Click to edit persons and tags for this story">quick edit</a></li>
+									<!-- <li><input type="text" name="some_name" value="@gonzalocasas #design #layout #interface" id="some_name" /><input type="submit" name="some_name" value="Save" id="some_name" /><br />Add new persons using @ and new tags using #</li> -->
+								</ul>
+							</div>
+						</div>
+					</div>
+					
+					<div class="story z">
+						<div class="meta">
+							<ul>
+								<li class="priority"><a href="">11</a></li>
+								<li><a href="">Accept</a></li>
+							</ul>
+						</div>
+						
+						<div class="description">
+							<div class="title">
+								<h4 class="large"><span class="editable" title="Click to edit">Cookies not working in homepage</span></h4>
+							</div>
+							
+							<div class="details">
+								<ul>
+									<li><input type="text" name="some_name" value="@gonzalocasas #design #layout #interface" id="some_name" /><input type="submit" name="some_name" value="Save" id="some_name" style="margin-left: 5px; width: auto;" /><br />Add new persons using @ and new tags using #</li>
+								</ul>
+							</div>
+						</div>
+					</div>
+					
+					<div class="story">
+						<div class="meta">
+							<ul>
+								<li class="priority"><a href="">11</a></li>
+								<li><a href="">Accept</a></li>
+							</ul>
+						</div>
+						
+						<div class="description">
+							<div class="title">
+								<h4 class="medium"><span class="editable" title="Click to edit">Login page needs remember me box</span></h4>
+							</div>
+							
+							<div class="details">
+								<ul>
+									<li><a href="" title="View stories for @gonzalocasas">@gonzalocasas</a> <a href="" title="View stories tagged as 'interface'">#interface</a> <a href="" title="View stories tagged as 'design'">#design</a> <a href="" title="View stories tagged as 'layout'">#layout</a> <a href="" class="quick-edit" title="Click to edit persons and tags for this story">quick edit</a></li>
+								</ul>
+								
+								<table>
+									<tr>
+										<th><label for="relevance">Relevance</label></th>
+										<td><input type="text" name="relevance" value="" id="relevance" /></td>
+									</tr>
+									<tr>
+										<th><label for="estimate">Estimate</label></th>
+										<td><input type="text" name="estimate" value="" id="estimate" /></td>
+									</tr>
+									<tr>
+										<th><label for="how-to-demo">How to demo</label></th>
+										<td><textarea name="how-to-demo" id="how-to-demo" rows="10" cols="10"></textarea></td>
+									</tr>
+									<tr>
+										<th><label for="description">Description</label></th>
+										<td><textarea name="description" id="description" rows="10" cols="10"></textarea></td>
+									</tr>
+									<tr>
+										<th />
+										<td><input type="submit" name="some_name" value="Save" id="some_name" style="width: auto; "/> or <a href="">dismiss</a></td>
+									</tr>
+								</table>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			
+			<div id="product-stories">
+				<div class="module">
+					<div class="module-header">
+						<h3>Product backlog</h3>
+					</div>
+				
+					<p>Welcome to the Widget HDTV Community! Our discussion forums are filled with thousands of Widget HDTV owners from around the world. Search for an answer, post your question, or answer other users' questions in the Widget Community. If you need help using this community, check out the Help section.</p>
+				</div>
+			</div>
+			
+			<div id="unplanned-stories">
+				<div class="module">
+					<div class="module-header">
+						<h3>Unplanned stories</h3>
+					</div>
+				
+					<p>Welcome to the Widget HDTV Community! Our discussion forums are filled with thousands of Widget HDTV owners from around the world. Search for an answer, post your question, or answer other users' questions in the Widget Community. If you need help using this community, check out the Help section.</p>
+				</div>
+			</div>
 		</div>
 	</div>
 </div>
