--- a/templates/css/master.css
+++ b/templates/css/master.css
@@ -18,6 +18,7 @@
 body {
 	font-family: Helvetica, Arial, Verdana, sans-serif;
 	font-size: 62.5%;
+/*	background: transparent url(../images/grid-1080.gif) repeat-y top center;*/
 	background-color: #fff;
 	color: #333;
 }
@@ -40,6 +41,12 @@ h1 {
 
 h2 {
 	font-size: 2.4em;
+	line-height: 1.3;
+	font-weight: normal;
+}
+
+h3 {
+	font-size: 1.8em;
 	line-height: 1.3;
 	font-weight: normal;
 }
@@ -77,7 +84,7 @@ h2 {
 }
 
 #session a:hover {
-/*	border-bottom: 1px solid #2C7FA2;*/
+	text-decoration: underline;
 }
 
 #wrapper {
@@ -87,6 +94,10 @@ h2 {
 	padding: 0 2em; /*Check*/
 	clear: both;
 	overflow: hidden;
+}
+
+#wrapper h1 a {
+	text-decoration: none;
 }
 
 #nav {
@@ -156,6 +167,185 @@ h2 {
 	line-height: 1.75;
 }
 
+#sprint-stories {
+	width: 52.8em;
+	margin-right: 2.4em;
+	float: left;
+}
+
+/*Chequear min-width y max-width, es necesario? */
+
+#product-stories {
+	width: 25.2em;
+	margin-right: 2.4em;
+	float: left;
+}
+
+#unplanned-stories {
+	max-width: 25.2em;
+	float: right;
+}
+
+.module-header {
+	margin: 0 0 2em 0;
+	clear: both;
+	overflow: hidden;
+}
+
+.module-header h3 {
+	float: left;
+}
+
+.module-header ul {
+	margin: .6em 0 0 0;
+	list-style-type: none;
+	float: right;
+}
+
+.module-header li {
+	font-size: 1.1em;
+	float: left;
+}
+
+.module-header li a {
+	color: #999;
+	text-decoration: none;
+}
+
+.module-header li a:hover {
+	text-decoration: underline;
+}
+
+.story {
+	padding: 1em 0;
+	border-bottom: 1px solid #ddd;
+	clear: both;
+	overflow: hidden;
+}
+
+.story:hover {
+/*	cursor: pointer;*/
+}
+
+.story .meta {
+	width: 6.8em;
+	float: left;
+}
+
+.story .meta ul {
+	list-style-type: none;
+}
+
+.story .meta li {
+	font-size: 1.3em;
+	text-align: center;
+}
+
+.story .meta li.priority {
+	font-size: 2.4em;
+}
+
+.story .meta li.priority a {
+	color: #333;
+}
+
+.story .meta li.priority a:hover {
+	color: #2C7FA2;
+}
+
+.story .meta li a {
+	text-decoration: none;
+	color: #2C7FA2;
+}
+
+.story .meta li a:hover {
+	text-decoration: underline;
+}
+
+.story .description {
+	margin-left: 9.2em;
+}
+
+.story .description .title h4 {
+	line-height: 1.3;
+}
+
+/*Sizes*/
+
+.small {
+	font-size: 1.3em;
+}
+
+.x-small {
+	font-size: 1.1em;
+}
+
+.medium {
+	font-size: 1.6em;
+}
+
+.large {
+	font-size: 2em;
+}
+
+.story .description .details ul {
+	list-style-type: none;
+}
+
+.story .description .details li {
+	font-size: 1.3em;
+	line-height: 1.75;
+}
+
+.story .description .details li a {
+	text-decoration: none;
+	color: #2C7FA2;
+}
+
+.story .description .details li.add-tags-button a {
+	color: #999;
+}
+
+.story .description .details li.add-tags-button a:hover {
+	text-decoration: underline;
+}
+
+.story .description .details input {
+	width: 70%;
+	padding: 2px;
+	font-family: Helvetica, Arial, Verdana, sans-serif;
+	font-size: 1em;
+}
+
+.story .description .details table {
+	width: 100%;
+	margin: 1em 0 0 0;
+	border-collapse: collapse;
+}
+
+.story .description .details table th {
+	width: 20%;
+	padding: .7em 0;
+	text-align: left;
+	font-size: 1.3em;
+	line-height: 1.75;
+	vertical-align: top;
+	border-bottom: 1px solid #ddd;
+}
+
+.story .description .details table td {
+	padding: .7em 0;
+	border-bottom: 1px solid #ddd;
+}
+
+.story .description .details table td input, .story .description .details table td textarea {
+	width: 70%;
+	padding: 2px;
+	font-family: Helvetica, Arial, Verdana, sans-serif;
+	font-size: 1.3em;
+	line-height: 1.2;
+}
+
 /* --------------------------------- [ General classes ] */
 
 .centered {
@@ -175,3 +365,18 @@ h2 {
 	color: #2E8424 !important;
 }
 
+.editable:hover {
+	background: yellow;
+}
+
+.z {
+	background: #FBFBFB;
+}
+
+.quick-edit {
+	color: #999 !important;
+}
+
+.quick-edit:hover {
+	text-decoration: underline !important;
+}
