--- a/templates/css/master.css
+++ b/templates/css/master.css
@@ -51,6 +51,38 @@ h3 {
 	font-weight: normal;
 }
 
+h4 {
+	margin: 1.5em 0 .2em 0;
+	font-size: 1.6em;
+	line-height: 1.3;
+	font-weight: normal;
+}
+
+code {
+	font-size: 1.3em;
+	color: #76AA00;
+}
+
+p {
+	margin-bottom: 1em;
+	font-size: 1.3em;
+	line-height: 1.75;
+}
+
+ul, ol {
+	margin: 0 0 1em 3em;
+}
+
+li {
+	margin-bottom: .5em;
+}
+
+input {
+	margin: .5em 0;
+	padding: 2px;
+	font-family: Monaco, "Courier New", fixed;
+}
+
 #session {
 	max-width: 108em;
 	margin: 0 auto;
@@ -62,12 +94,13 @@ h3 {
 
 #session ul {
 	width: 100%;
+	margin: 0;
 	list-style-type: none;
 	float: right;
 }
 
 #session li {
-	margin-left: 2.4em;
+	margin: 0 0 0 2.4em;
 	font-size: 1.2em;
 	line-height: 1.75;
 	float: right;
@@ -110,10 +143,12 @@ h3 {
 }
 
 #nav ul {
+	margin: 0;
 	list-style-type: none;
 }
 
 #nav li {
+	margin: 0;
 	font-size: 1.6em;
 	line-height: 1.3;
 	float: left;
@@ -142,12 +177,13 @@ h3 {
 }
 
 #page-header ul {
+	margin: 0;
 	list-style-type: none;
 	overflow: hidden;
 }
 
 #page-header li {
-	margin-right: 2.4em;
+	margin: 0 2.4em 0 0;
 	font-size: 1.3em;
 	line-height: 1.75;
 	float: left;
@@ -160,11 +196,6 @@ h3 {
 
 #page-header li a:hover {
 	text-decoration: underline;
-}
-
-#content-wrapper p {
-	font-size: 1.3em;
-	line-height: 1.75;
 }
 
 #sprint-stories {
@@ -203,6 +234,7 @@ h3 {
 }
 
 .module-header li {
+	margin: 0;
 	font-size: 1.1em;
 	float: left;
 }
@@ -233,16 +265,19 @@ h3 {
 }
 
 .story .meta ul {
+	margin: 0;
 	list-style-type: none;
 }
 
 .story .meta li {
+	margin: 0;
 	font-size: 1.3em;
 	text-align: center;
 }
 
 .story .meta li.priority {
 	font-size: 2.4em;
+	line-height: 1.3;
 }
 
 .story .meta li.priority a {
@@ -267,34 +302,35 @@ h3 {
 }
 
 .story .description .title h4 {
+	margin: 0;
 	line-height: 1.3;
 }
 
-/*Sizes*/
+/* Common sizes for tags and story titles */
 
-.small {
+h4.small {
 	font-size: 1.3em;
 }
 
-.x-small {
+h4.x-small {
 	font-size: 1.1em;
 }
 
-.medium {
+h4.medium {
 	font-size: 1.6em;
 }
 
-.large {
+h4.large {
 	font-size: 2em;
 }
 
 .story .description .details ul {
+	margin: 0;
 	list-style-type: none;
 }
 
 .story .description .details li {
-	font-size: 1.3em;
-	line-height: 1.75;
+	margin: 0;
 }
 
 .story .description .details li a {
@@ -310,40 +346,81 @@ h3 {
 	text-decoration: underline;
 }
 
-.story .description .details input {
-	width: 70%;
-	padding: 2px;
-	font-family: Helvetica, Arial, Verdana, sans-serif;
-	font-size: 1em;
+.story .description .details p {
+	margin: 0;
 }
 
-.story .description .details table {
+.story .description .details input {
+	width: 70%;
+}
+
+/*Forms*/
+
+table.common {
 	width: 100%;
-	margin: 1em 0 0 0;
+	margin: 0 0 1em 0;
 	border-collapse: collapse;
 }
 
-.story .description .details table th {
-	width: 20%;
-	padding: .7em 0;
+table.common tr {
+	border-bottom: 1px solid #ddd;
+}
+
+table.common tr:last-child {
+	border: 0;
+}
+
+table.common th {
+	width: 25%;
+	padding: 1.3em;
 	text-align: left;
+	vertical-align: top;
+}
+
+table.common td {
+	padding: 1.3em;
+}
+
+table.small th, table.small td {
+	padding: .5em;
+}
+
+table.common label {
 	font-size: 1.3em;
 	line-height: 1.75;
-	vertical-align: top;
-	border-bottom: 1px solid #ddd;
 }
 
-.story .description .details table td {
-	padding: .7em 0;
-	border-bottom: 1px solid #ddd;
-}
-
-.story .description .details table td input, .story .description .details table td textarea {
+table.common input, table.common textarea {
 	width: 70%;
+	margin: 0 0 .5em 0;
 	padding: 2px;
-	font-family: Helvetica, Arial, Verdana, sans-serif;
-	font-size: 1.3em;
+	font-family: Monaco, "Courier New", fixed;
+	font-size: 1.2em;
 	line-height: 1.2;
+}
+
+p.tooltip {
+	margin-bottom: 0;
+	font-weight: normal;
+	line-height: 1.4;
+	color: #999;
+}
+
+input.submit {
+	width: auto !important;
+}
+
+table.common p.submit {
+	margin-bottom: 0;
+}
+
+table.common p.submit a {
+	color: #2C7FA2;
+	text-decoration: none;
+}
+
+table.common p.submit a:hover {
+	text-decoration: underline;
 }
 
 /* --------------------------------- [ General classes ] */
@@ -362,7 +439,7 @@ h3 {
 }
 
 .ok {
-	color: #2E8424 !important;
+	color: #76AA00 !important;
 }
 
 .editable:hover {
