--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -67,8 +67,7 @@
 							
 							<div class="details">
 								<ul>
-									<li><a href="" title="View stories for @gonzalocasas">@gonzalocasas</a> <a href="" title="View stories tagged as 'interface'">#interface</a> <a href="" title="View stories tagged as 'design'">#design</a> <a href="" title="View stories tagged as 'layout'">#layout</a> <a href="" class="quick-edit" title="Click to edit persons and tags for this story">quick edit</a></li>
-									<!-- <li><input type="text" name="some_name" value="@gonzalocasas #design #layout #interface" id="some_name" /><input type="submit" name="some_name" value="Save" id="some_name" /><br />Add new persons using @ and new tags using #</li> -->
+									<li><p><a href="" title="View stories for @gonzalocasas">@gonzalocasas</a> <a href="" title="View stories tagged as 'interface'">#interface</a> <a href="" title="View stories tagged as 'design'">#design</a> <a href="" title="View stories tagged as 'layout'">#layout</a> <a href="" class="quick-edit" title="Click to edit persons and tags for this story">quick edit</a></p></li>
 								</ul>
 							</div>
 						</div>
@@ -89,7 +88,8 @@
 							
 							<div class="details">
 								<ul>
-									<li><input type="text" name="some_name" value="@gonzalocasas #design #layout #interface" id="some_name" /><input type="submit" name="some_name" value="Save" id="some_name" style="margin-left: 5px; width: auto;" /><br />Add new persons using @ and new tags using #</li>
+									<li><input type="text" name="some_name" value="@gonzalocasas #design #layout #interface" id="some_name" /><input type="submit" name="some_name" value="Save" id="some_name" class="submit" style="margin-left:5px" /></li>
+									<li><p class="tooltip">Add new persons using @ and new tags using #</p></li>
 								</ul>
 							</div>
 						</div>
@@ -110,10 +110,10 @@
 							
 							<div class="details">
 								<ul>
-									<li><a href="" title="View stories for @gonzalocasas">@gonzalocasas</a> <a href="" title="View stories tagged as 'interface'">#interface</a> <a href="" title="View stories tagged as 'design'">#design</a> <a href="" title="View stories tagged as 'layout'">#layout</a> <a href="" class="quick-edit" title="Click to edit persons and tags for this story">quick edit</a></li>
+									<li><p><a href="" title="View stories for @gonzalocasas">@gonzalocasas</a> <a href="" title="View stories tagged as 'interface'">#interface</a> <a href="" title="View stories tagged as 'design'">#design</a> <a href="" title="View stories tagged as 'layout'">#layout</a> <a href="" class="quick-edit" title="Click to edit persons and tags for this story">quick edit</a></p></li>
 								</ul>
 								
-								<table>
+								<table class="common small" style="margin-top: 1em">
 									<tr>
 										<th><label for="relevance">Relevance</label></th>
 										<td><input type="text" name="relevance" value="" id="relevance" /></td>
@@ -132,7 +132,7 @@
 									</tr>
 									<tr>
 										<th />
-										<td><input type="submit" name="some_name" value="Save" id="some_name" style="width: auto; "/> or <a href="">dismiss</a></td>
+										<td><p><input type="submit" name="some_name" value="Save" id="some_name" style="width: auto; "/> or <a href="">dismiss</a></p></td>
 									</tr>
 								</table>
 							</div>
