--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -55,7 +55,7 @@
 					<div class="story">
 						<div class="meta">
 							<ul>
-								<li class="priority"><a href="">11</a></li>
+								<li class="priority"><a href="">3</a></li>
 								<li><a href="">Accept</a></li>
 							</ul>
 						</div>
@@ -76,7 +76,7 @@
 					<div class="story z">
 						<div class="meta">
 							<ul>
-								<li class="priority"><a href="">11</a></li>
+								<li class="priority"><a href="">47</a></li>
 								<li><a href="">Accept</a></li>
 							</ul>
 						</div>
@@ -98,7 +98,7 @@
 					<div class="story">
 						<div class="meta">
 							<ul>
-								<li class="priority"><a href="">11</a></li>
+								<li class="priority"><a href="">56</a></li>
 								<li><a href="">Accept</a></li>
 							</ul>
 						</div>
@@ -113,7 +113,7 @@
 									<li><p><a href="" title="View stories for @gonzalocasas">@gonzalocasas</a> <a href="" title="View stories tagged as 'interface'">#interface</a> <a href="" title="View stories tagged as 'design'">#design</a> <a href="" title="View stories tagged as 'layout'">#layout</a> <a href="" class="quick-edit" title="Click to edit persons and tags for this story">quick edit</a></p></li>
 								</ul>
 								
-								<table class="common small" style="margin-top: 1em">
+								<table class="common small">
 									<tr>
 										<th><label for="relevance">Relevance</label></th>
 										<td><input type="text" name="relevance" value="" id="relevance" /></td>
@@ -147,7 +147,47 @@
 						<h3>Product backlog</h3>
 					</div>
 				
-					<p>Welcome to the Widget HDTV Community! Our discussion forums are filled with thousands of Widget HDTV owners from around the world. Search for an answer, post your question, or answer other users' questions in the Widget Community. If you need help using this community, check out the Help section.</p>
+					<div class="story">
+						<div class="meta">
+							<ul>
+								<li class="priority"><a href="">11</a></li>
+								<li><a href="">Accept</a></li>
+							</ul>
+						</div>
+						
+						<div class="description">
+							<div class="title">
+								<h4 class="small"><span class="editable" title="Click to edit">A cool story</span></h4>
+							</div>
+							
+							<div class="details">
+								<ul>
+									<li><p><a href="" title="View stories for @pablius">@pablius</a> <a href="" title="View stories tagged as 'interface'">#interface</a> <a href="" title="View stories tagged as 'design'">#design</a> <a href="" title="View stories tagged as 'layout'">#layout</a> <a href="" class="quick-edit" title="Click to edit persons and tags for this story">quick edit</a></p></li>
+								</ul>
+							</div>
+						</div>
+					</div>
+					
+					<div class="story z">
+						<div class="meta">
+							<ul>
+								<li class="priority"><a href="">23</a></li>
+								<li><a href="">Accept</a></li>
+							</ul>
+						</div>
+						
+						<div class="description">
+							<div class="title">
+								<h4 class="medium"><span class="editable" title="Click to edit">Two line story that needs urgent attention</span></h4>
+							</div>
+							
+							<div class="details">
+								<ul>
+									<li><p><a href="" title="View stories for @gonzalocasas">@pablius</a> <a href="" title="View stories tagged as 'interface'">#interface</a> <a href="" class="quick-edit" title="Click to edit persons and tags for this story">quick edit</a></p></li>
+								</ul>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 			
@@ -157,7 +197,26 @@
 						<h3>Unplanned stories</h3>
 					</div>
 				
-					<p>Welcome to the Widget HDTV Community! Our discussion forums are filled with thousands of Widget HDTV owners from around the world. Search for an answer, post your question, or answer other users' questions in the Widget Community. If you need help using this community, check out the Help section.</p>
+					<div class="story">
+						<div class="meta">
+							<ul>
+								<li class="priority"><a href="">8</a></li>
+								<li><a href="">Accept</a></li>
+							</ul>
+						</div>
+						
+						<div class="description">
+							<div class="title">
+								<h4 class="small"><span class="editable" title="Click to edit">Your first story</span></h4>
+							</div>
+							
+							<div class="details">
+								<ul>
+									<li><p><a href="" title="View stories for @pablius">@pablius</a> <a href="" title="View stories tagged as 'interface'">#interface</a> <a href="" title="View stories tagged as 'design'">#design</a> <a href="" title="View stories tagged as 'layout'">#layout</a> <a href="" class="quick-edit" title="Click to edit persons and tags for this story">quick edit</a></p></li>
+								</ul>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
