--- a/templates/forms.html
+++ b/templates/forms.html
@@ -42,7 +42,7 @@
 		</div>
 		
 		<div id="content-wrapper">			
-			<h3>Elements</h3>
+			<h3>Common HTML elements</h3>
 			
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -57,6 +57,8 @@
 			</ul>
 			
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			
+			<hr />			
 			
 			<h3>Forms</h3>
 			
@@ -104,6 +106,130 @@
 					</tr>
 				</table>
 			</form>
+			
+			<hr />			
+			
+			<h3>Module: Story</h3>
+			
+			<p>Stories are build using a series of <code>DIV</code>s and <code>UL</code>s.</p>
+			
+			<div class="story">
+				<div class="meta">
+					<ul>
+						<li class="priority"><a href="">11</a></li>
+						<li><a href="">Accept</a></li>
+					</ul>
+				</div>
+				
+				<div class="description">
+					<div class="title">
+						<h4 class="medium"><span class="editable" title="Click to edit">Login page needs remember me box</span></h4>
+					</div>
+					
+					<div class="details">
+						<ul>
+							<li><p><a href="" title="View stories for @gonzalocasas">@gonzalocasas</a> <a href="" title="View stories tagged as 'interface'">#interface</a> <a href="" title="View stories tagged as 'design'">#design</a> <a href="" title="View stories tagged as 'layout'">#layout</a> <a href="" class="quick-edit" title="Click to edit persons and tags for this story">quick edit</a></p></li>
+						</ul>
+					</div>
+				</div>
+			</div>
+			
+			<div class="story z">
+				<div class="meta">
+					<ul>
+						<li class="priority"><a href="">11</a></li>
+						<li><a href="">Accept</a></li>
+					</ul>
+				</div>
+				
+				<div class="description">
+					<div class="title">
+						<h4 class="large"><span class="editable" title="Click to edit">Cookies not working in homepage</span></h4>
+					</div>
+					
+					<div class="details">
+						<ul>
+							<li><input type="text" name="some_name" value="@gonzalocasas #design #layout #interface" id="some_name" /><input type="submit" name="some_name" value="Save" id="some_name" class="submit" style="margin-left:5px" /></li>
+							<li><p class="tooltip">Add new persons using @ and new tags using #</p></li>
+						</ul>
+					</div>
+				</div>
+			</div>
+			
+			<div class="story">
+				<div class="meta">
+					<ul>
+						<li class="priority"><a href="">11</a></li>
+						<li><a href="">Accept</a></li>
+					</ul>
+				</div>
+				
+				<div class="description">
+					<div class="title">
+						<h4 class="medium"><span class="editable" title="Click to edit">Login page needs remember me box</span></h4>
+					</div>
+					
+					<div class="details">
+						<ul>
+							<li><p><a href="" title="View stories for @gonzalocasas">@gonzalocasas</a> <a href="" title="View stories tagged as 'interface'">#interface</a> <a href="" title="View stories tagged as 'design'">#design</a> <a href="" title="View stories tagged as 'layout'">#layout</a> <a href="" class="quick-edit" title="Click to edit persons and tags for this story">quick edit</a></p></li>
+						</ul>
+						
+						<table class="common small">
+							<tr>
+								<th><label for="relevance">Relevance</label></th>
+								<td><input type="text" name="relevance" value="" id="relevance" /></td>
+							</tr>
+							<tr>
+								<th><label for="estimate">Estimate</label></th>
+								<td><input type="text" name="estimate" value="" id="estimate" /></td>
+							</tr>
+							<tr>
+								<th><label for="how-to-demo">How to demo</label></th>
+								<td><textarea name="how-to-demo" id="how-to-demo" rows="10" cols="10"></textarea></td>
+							</tr>
+							<tr>
+								<th><label for="description">Description</label></th>
+								<td><textarea name="description" id="description" rows="10" cols="10"></textarea></td>
+							</tr>
+							<tr>
+								<th />
+								<td><p><input type="submit" name="some_name" value="Save" id="some_name" style="width: auto; "/> or <a href="">dismiss</a></p></td>
+							</tr>
+						</table>
+					</div>
+				</div>
+			</div>
+
+			<hr />
+			
+			<h3>Layouts</h3>
+			
+			<p>Two columns.</p>
+			
+			<div id="left-col">
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			</div>
+			
+			<div id="right-col">
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			</div>
+			
+			<p>Three columns.</p>
+			
+			<div id="first-col">
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			</div>
+			
+			<div id="second-cold">
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			</div>
+			
+			<div id="third-cold">
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			</div>
+			
+			<p>Three columns.</p>
+			
 		</div>
 	</div>
 </div>
