Added People template, new footer, adjusted page width to 930px

--- a/templates/login.html
+++ b/templates/login.html
@@ -37,7 +37,7 @@
 				<form action="forms_submit" method="get" accept-charset="utf-8">
 					<table class="common login">
 						<tr>
-							<th>
+							<th style="width: 10%">
 								<label for="username">Username</label>
 							</th>
 							<td style="width: 50%">
