--- a/templates/css/master.css
+++ b/templates/css/master.css
@@ -19,6 +19,7 @@ body {
 	font-family: Helvetica, Arial, Verdana, sans-serif;
 	font-size: 62.5%;
 /*	background: transparent url(../images/grid-1080.gif) repeat-y top center;*/
+/*	background: transparent url(../images/grid-960.gif) repeat-y top center;*/
 	background-color: #fff;
 	color: #333;
 }
@@ -88,7 +89,8 @@ input {
 }
 
 #session {
-	max-width: 108em;
+/*	max-width: 108em;*/
+	max-width: 96em;
 	margin: 0 auto;
 	margin-bottom: 2em;
 	padding: .5em 0; /*check right margin*/
@@ -125,7 +127,8 @@ input {
 }
 
 #wrapper {
-	max-width: 108em;
+/*	max-width: 108em;*/
+	max-width: 96em;
 	min-width: 76em;
 	margin: 0 auto;
 	padding: 0 2em; /*Check*/
@@ -141,7 +144,7 @@ input {
 	margin: 0 0 3em 0;
 	background: #F0F0F0;
 	border: 1px solid #E0E0E0;
-	-moz-border-radius: 15px 15px 0 0;
+/*	-moz-border-radius: 15px 15px 0 0;*/
 	clear: both;
 	overflow: hidden;
 }
@@ -153,20 +156,23 @@ input {
 
 #nav li {
 	margin: 0;
-	font-size: 1.6em;
+	font-size: 1.4em;
 	line-height: 1.3;
+	border-right: 1px solid #fff;
 	float: left;
 }
 
 #nav li a {
 	display: block;
-	padding: .6em 1em;
+	padding: .7em 1em;
 	border-right: 1px solid #E0E0E0;
-	color: #999;
+	color: #2C7FA2;
 	text-decoration: none;
 }
 
 #nav li a:hover {
+	background: #fff;
+	border-right-color: #E0E0E0;
 	color: #000;
 }
 
@@ -312,19 +318,19 @@ input {
 
 /* Common sizes for tags and story titles */
 
-h4.small {
-	font-size: 1.3em;
-}
-
-h4.x-small {
+h4.x-small, a.x-small {
 	font-size: 1.1em;
 }
 
-h4.medium {
+h4.small, a.small {
+	font-size: 1.3em;
+}
+
+h4.medium, a.medium {
 	font-size: 1.6em;
 }
 
-h4.large {
+h4.large, a.large {
 	font-size: 2em;
 }
 
@@ -379,7 +385,7 @@ table.common tr:last-child {
 }
 
 table.common th {
-	width: 25%;
+/*	width: 25%;*/
 	padding: 1.3em;
 	text-align: left;
 	vertical-align: top;
@@ -474,6 +480,115 @@ table.login tr {
 	line-height: 1.6;
 }
 
+.tags {
+	
+}
+
+.tags a {
+	color: #2C7FA2;
+	text-decoration: none;
+}
+
+.tags a:hover {
+	text-decoration: underline;
+}
+
+dl.person {
+	padding: 1em;
+	border-bottom: 1px solid #ddd;
+	overflow: hidden;
+	clear: both;
+}
+
+dl.person dt {
+	width: 5.8em;
+	float: left;
+}
+
+dl.person dd {
+	width: 13em;
+	margin-left: 2.4em;
+	float: left;
+}
+
+dl.person dd + dd {
+	width: 37.6em;
+	margin-left: 2.4em;
+}
+
+dl.person a {
+	color: #2C7FA2;
+	text-decoration: none;
+}
+
+dl.person a:hover {
+	text-decoration: underline;
+}
+
+#content-wrapper {
+	margin: 0 0 3em 0;
+	clear: both;
+	overflow: hidden;
+}
+
+#footer-wrapper {
+	margin: 0 0 3em 0;
+	border-top: 1px solid #ddd;
+	clear: both;
+	overflow: hidden;
+}
+
+#footer {
+	max-width: 96em;
+	min-width: 76em;
+	margin: 0 auto;
+	padding: 1.5em 0 0 0;
+}
+
+#footer .section {
+	margin: 0 2.4em 1.5em 0;
+	padding: 0;
+	width: 22.2em;
+	border: 0;
+	float: left;
+}
+
+#footer .section:last-child {
+	margin-right: 0;
+}
+
+#footer .section h3 {
+	margin-bottom: .5em;
+	font-size: 1.3em;
+	font-weight: bold;
+}
+
+#footer .section ul {
+	margin: 0;
+	list-style-type: none;
+}
+
+#footer .section li {
+	margin: 0;
+}
+
+#footer .section li p {
+	line-height: 1.4;
+}
+
+#footer a {
+	color: #2C7FA2;
+	text-decoration: none;
+}
+
+#footer a:hover {
+	text-decoration: underline;
+}
+
+#footer .copyright {
+	clear: both;
+	margin: 0;
+}
 /* --------------------------------- [ General classes ] */
 
 .centered {
