--- a/templates/people.html
+++ b/templates/people.html
@@ -25,7 +25,7 @@
 	
 	<div id="nav">
 		<ul>
-			<li><a href="" class="active">Stories</a></li>
+			<li><a href="">Stories</a></li>
 			<li><a href="">Messages</a></li>
 			<li><a href="">Metrics</a></li>
 		</ul>
@@ -33,39 +33,56 @@
 	
 	<div id="inner-wrapper">
 		<div id="page-header">
-			<h2>Stories</h2>
+			<h2>People</h2>
 			
 			<ul>
-				<li><a href="">Add new story</a></li>
-				<li><a href="">Browse by tags</a></li>
+				<li><a href="">Add new person</a></li>
 			</ul>
 		</div>
 		
 		<div id="content-wrapper">
 			<div id="left-content">
-				<h3>People</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				
+				<dl class="person">
+					<dt><img src="images/avatar.png" alt="Avatar" /></dt>
+					<dd><p><a href="">@pablomicolini</a><br />Pablo Micolini</p></dd>
+					<dd><p>Online developer and entrepreneur. President at Nutus.</p></dd>
+				</dl>
+				
+				<dl class="person z">
+					<dt><img src="images/avatar.png" alt="Avatar" /></dt>
+					<dd><p><a href="">@pablomicolini</a><br />Pablo Micolini</p></dd>
+					<dd><p>Online developer and entrepreneur. President at Nutus.</p></dd>
+				</dl>
+				
+				<dl class="person">
+					<dt><img src="images/avatar.png" alt="Avatar" /></dt>
+					<dd><p><a href="">@pablomicolini</a><br />Pablo Micolini</p></dd>
+					<dd><p>Online developer and entrepreneur. President at Nutus.</p></dd>
+				</dl>
 			</div>
 			
 			<div id="sidebar">
 				<div class="section">
-					<h3>Section title</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					<h3>Recent activity</h3>
+					
+					<div class="tags">
+						<p><a href="" class="small">@rodrigogalindez</a> <a href="" class="large">@pablius</a> <a href="" class="x-small">@gonzalocasas</a> <a href="" class="medium">@melocotoncita</a> <a href="" class="large">@lebowski</a></p>
+					</div>
 				</div>
 			</div>
 		</div>
 	</div>
 </div>
 	
-	<div id="footer-wrapper" style="display: none">
+	<div id="footer-wrapper">
 		<div id="footer">
 			<div class="section">
 				<h3>About</h3>
 				
 				<ul>
-					<li><a href="">Blog</a></li>
-					<li><a href="">Contact</a></li>
-					<li><a href="">Privacy Policy</a></li>
+					<li><p><a href="">Blog</a></p></li>
+					<li><p><a href="">Contact</a></p></li>
 				</ul>
 			</div>
 			
@@ -73,10 +90,13 @@
 				<h3>Help</h3>
 				
 				<ul>
-					<li><a href="">FAQ</a></li>
-					<li><a href="">Support</a></li>
+					<li><p><a href="">FAQ</a></p></li>
+					<li><p><a href="">Support</a></p></li>
 				</ul>
 			</div>
+			
+			<p class="copyright">Copyright © 2009, ourappname. All rights reserved.</p>
+			<p class="copyright"><a href="">Privacy Policy</a>. <a href="">Terms and Conditions</a>.</p>
 		</div>
 	</div>
 
