Reworked forms to align to a grid, cleaned CSS code

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -12,7 +12,7 @@
 
 <div id="session">
 	<ul>
-		<li class="account"><a href="" class="ok">&laquo; upgrade your account</a></li>
+		<li><a href="" class="ok">&laquo; upgrade your account</a></li>
 		<li><a href="">rodrigogalindez</a></li>
 		<li><a href="">people</a></li>
 		<li><a href="">project settings</a></li>
@@ -20,7 +20,7 @@
 	</ul>
 </div>
 
-<div id="wrapper">
+<div id="wrapper" class="span-12">
 	<h1><span class="editable" title="Click to edit">Polaris</span></h1>
 	
 	<div id="nav">
@@ -42,7 +42,7 @@
 		</div>
 		
 		<div id="content-wrapper">
-			<div id="sprint-stories">
+			<div class="col span-6">
 				<div class="module">
 					<div class="module-header">
 						<h3>This Sprint</h3>
@@ -51,139 +51,157 @@
 							<li><a href="">Sprint settings</a></li>
 						</ul>
 					</div>
-				
+					
 					<div class="story">
-						<div class="meta">
+						<div class="story-meta">
+							<ul>
+								<li class="priority"><a href="">117</a></li>
+								<!-- <li><a href="">Accept</a></li> -->
+							</ul>
+						</div>
+						
+						<div class="story-description">
+							<div class="story-title">
+								<h4 class="medium"><span class="editable" title="Click to edit">Login page needs remember me box</span></h4>
+							</div>
+							
+							<div class="story-details">
+								<ul>
+									<li><p><a href="" title="View stories for @gonzalocasas">@gonzalocasas</a> <a href="" title="View stories tagged as 'interface'">#interface</a> <a href="" title="View stories tagged as 'design'">#design</a> <a href="" title="View stories tagged as 'layout'">#layout</a> <a href="" class="quick-edit" title="Click to edit persons and tags for this story">quick edit</a></p></li>
+								</ul>
+							</div>
+						</div>
+					</div>
+
+					<div class="story">
+						<div class="story-meta">
 							<ul>
 								<li class="priority"><a href="">3</a></li>
-								<li><a href="">Accept</a></li>
+								<!-- <li><a href="">Accept</a></li> -->
 							</ul>
 						</div>
 						
-						<div class="description">
-							<div class="title">
-								<h4 class="medium"><span class="editable" title="Click to edit">Login page needs remember me box</span></h4>
+						<div class="story-description">
+							<div class="story-title">
+								<h4 class="small"><span class="editable" title="Click to edit">Re-build error messages</span></h4>
 							</div>
 							
-							<div class="details">
+							<div class="story-details">
 								<ul>
 									<li><p><a href="" title="View stories for @gonzalocasas">@gonzalocasas</a> <a href="" title="View stories tagged as 'interface'">#interface</a> <a href="" title="View stories tagged as 'design'">#design</a> <a href="" title="View stories tagged as 'layout'">#layout</a> <a href="" class="quick-edit" title="Click to edit persons and tags for this story">quick edit</a></p></li>
-								</ul>
-							</div>
-						</div>
-					</div>
-					
-					<div class="story z">
-						<div class="meta">
-							<ul>
-								<li class="priority"><a href="">47</a></li>
-								<li><a href="">Accept</a></li>
-							</ul>
-						</div>
-						
-						<div class="description">
-							<div class="title">
-								<h4 class="large"><span class="editable" title="Click to edit">Cookies not working in homepage</span></h4>
-							</div>
-							
-							<div class="details">
-								<ul>
-									<li><input type="text" name="some_name" value="@gonzalocasas #design #layout #interface" id="some_name" /><input type="submit" name="some_name" value="Save" id="some_name" class="submit" style="margin-left:5px" /></li>
-									<li><p class="tooltip">Add new persons using @ and new tags using #</p></li>
 								</ul>
 							</div>
 						</div>
 					</div>
 					
 					<div class="story">
-						<div class="meta">
+						<div class="story-meta">
 							<ul>
-								<li class="priority"><a href="">56</a></li>
-								<li><a href="">Accept</a></li>
+								<li class="priority"><a href="">3</a></li>
+								<!-- <li><a href="">Accept</a></li> -->
 							</ul>
 						</div>
 						
-						<div class="description">
-							<div class="title">
-								<h4 class="medium"><span class="editable" title="Click to edit">Login page needs remember me box</span></h4>
+						<div class="story-description">
+							<div class="story-title">
+								<h4 class="x-small"><span class="editable" title="Click to edit">Re-build error messages</span></h4>
 							</div>
 							
-							<div class="details">
+							<div class="story-details">
 								<ul>
 									<li><p><a href="" title="View stories for @gonzalocasas">@gonzalocasas</a> <a href="" title="View stories tagged as 'interface'">#interface</a> <a href="" title="View stories tagged as 'design'">#design</a> <a href="" title="View stories tagged as 'layout'">#layout</a> <a href="" class="quick-edit" title="Click to edit persons and tags for this story">quick edit</a></p></li>
 								</ul>
-								
-								<table class="common small">
-									<tr>
-										<th><label for="relevance">Relevance</label></th>
-										<td><input type="text" name="relevance" value="" id="relevance" /></td>
-									</tr>
-									<tr>
-										<th><label for="estimate">Estimate</label></th>
-										<td><input type="text" name="estimate" value="" id="estimate" /></td>
-									</tr>
-									<tr>
-										<th><label for="how-to-demo">How to demo</label></th>
-										<td><textarea name="how-to-demo" id="how-to-demo" rows="10" cols="10"></textarea></td>
-									</tr>
-									<tr>
-										<th><label for="description">Description</label></th>
-										<td><textarea name="description" id="description" rows="10" cols="10"></textarea></td>
-									</tr>
-									<tr>
-										<th />
-										<td><p><input type="submit" name="some_name" value="Save" id="some_name" style="width: auto; "/> or <a href="">dismiss</a></p></td>
-									</tr>
-								</table>
+							</div>
+						</div>
+					</div>
+					
+					<div class="story">
+						<div class="story-meta">
+							<ul>
+								<li class="priority"><a href="">3</a></li>
+								<!-- <li><a href="">Accept</a></li> -->
+							</ul>
+						</div>
+						
+						<div class="story-description">
+							<div class="story-title">
+								<h4 class="large"><span class="editable" title="Click to edit">Re-build error messages</span></h4>
+							</div>
+							
+							<div class="story-details">
+								<ul>
+									<li><p><a href="" title="View stories for @gonzalocasas">@gonzalocasas</a> <a href="" title="View stories tagged as 'interface'">#interface</a> <a href="" title="View stories tagged as 'design'">#design</a> <a href="" title="View stories tagged as 'layout'">#layout</a> <a href="" class="quick-edit" title="Click to edit persons and tags for this story">quick edit</a></p></li>
+								</ul>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 			
-			<div id="product-stories">
+			<div class="col span-3">
 				<div class="module">
 					<div class="module-header">
 						<h3>Product backlog</h3>
 					</div>
-				
+					
 					<div class="story">
-						<div class="meta">
+						<div class="story-meta col last span-1">
 							<ul>
-								<li class="priority"><a href="">11</a></li>
-								<li><a href="">Accept</a></li>
+								<li class="priority"><a href="">3</a></li>
+								<!-- <li><a href="">Accept</a></li> -->
 							</ul>
 						</div>
 						
-						<div class="description">
-							<div class="title">
-								<h4 class="small"><span class="editable" title="Click to edit">A cool story</span></h4>
+						<div class="story-description">
+							<div class="story-title">
+								<h4 class="large"><span class="editable" title="Click to edit">Login page needs remember me box</span></h4>
 							</div>
 							
-							<div class="details">
+							<div class="story-details">
 								<ul>
-									<li><p><a href="" title="View stories for @pablius">@pablius</a> <a href="" title="View stories tagged as 'interface'">#interface</a> <a href="" title="View stories tagged as 'design'">#design</a> <a href="" title="View stories tagged as 'layout'">#layout</a> <a href="" class="quick-edit" title="Click to edit persons and tags for this story">quick edit</a></p></li>
+									<li><p><a href="" title="View stories for @gonzalocasas">@gonzalocasas</a> <a href="" title="View stories tagged as 'interface'">#interface</a> <a href="" title="View stories tagged as 'design'">#design</a> <a href="" title="View stories tagged as 'layout'">#layout</a> <a href="" class="quick-edit" title="Click to edit persons and tags for this story">quick edit</a></p></li>
 								</ul>
 							</div>
 						</div>
 					</div>
 					
-					<div class="story z">
-						<div class="meta">
+					<div class="story">
+						<div class="story-meta col last span-1">
 							<ul>
-								<li class="priority"><a href="">23</a></li>
-								<li><a href="">Accept</a></li>
+								<li class="priority"><a href="">3</a></li>
+								<!-- <li><a href="">Accept</a></li> -->
 							</ul>
 						</div>
 						
-						<div class="description">
-							<div class="title">
-								<h4 class="medium"><span class="editable" title="Click to edit">Two line story that needs urgent attention</span></h4>
+						<div class="story-description">
+							<div class="story-title">
+								<h4 class="medium"><span class="editable" title="Click to edit">Login page needs remember me box</span></h4>
 							</div>
 							
-							<div class="details">
+							<div class="story-details">
 								<ul>
-									<li><p><a href="" title="View stories for @gonzalocasas">@pablius</a> <a href="" title="View stories tagged as 'interface'">#interface</a> <a href="" class="quick-edit" title="Click to edit persons and tags for this story">quick edit</a></p></li>
+									<li><p><a href="" title="View stories for @gonzalocasas">@gonzalocasas</a> <a href="" title="View stories tagged as 'interface'">#interface</a> <a href="" title="View stories tagged as 'design'">#design</a> <a href="" title="View stories tagged as 'layout'">#layout</a> <a href="" class="quick-edit" title="Click to edit persons and tags for this story">quick edit</a></p></li>
+								</ul>
+							</div>
+						</div>
+					</div>
+					
+					<div class="story">
+						<div class="story-meta col last span-1">
+							<ul>
+								<li class="priority"><a href="">3</a></li>
+								<!-- <li><a href="">Accept</a></li> -->
+							</ul>
+						</div>
+						
+						<div class="story-description">
+							<div class="story-title">
+								<h4 class="x-small"><span class="editable" title="Click to edit">A quick story</span></h4>
+							</div>
+							
+							<div class="story-details">
+								<ul>
+									<li><p><a href="" title="View stories for @gonzalocasas">@gonzalocasas</a> <a href="" title="View stories tagged as 'interface'">#interface</a> <a href="" title="View stories tagged as 'design'">#design</a> <a href="" title="View stories tagged as 'layout'">#layout</a> <a href="" class="quick-edit" title="Click to edit persons and tags for this story">quick edit</a></p></li>
 								</ul>
 							</div>
 						</div>
@@ -191,28 +209,28 @@
 				</div>
 			</div>
 			
-			<div id="unplanned-stories">
+			<div class="col last span-3">
 				<div class="module">
 					<div class="module-header">
 						<h3>Unplanned stories</h3>
 					</div>
-				
+					
 					<div class="story">
-						<div class="meta">
+						<div class="story-meta col last span-1">
 							<ul>
-								<li class="priority"><a href="">8</a></li>
-								<li><a href="">Accept</a></li>
+								<li class="priority"><a href="">3</a></li>
+								<!-- <li><a href="">Accept</a></li> -->
 							</ul>
 						</div>
 						
-						<div class="description">
-							<div class="title">
-								<h4 class="small"><span class="editable" title="Click to edit">Your first story</span></h4>
+						<div class="story-description">
+							<div class="story-title">
+								<h4 class="small"><span class="editable" title="Click to edit">Redesign cookies</span></h4>
 							</div>
 							
-							<div class="details">
+							<div class="story-details">
 								<ul>
-									<li><p><a href="" title="View stories for @pablius">@pablius</a> <a href="" title="View stories tagged as 'interface'">#interface</a> <a href="" title="View stories tagged as 'design'">#design</a> <a href="" title="View stories tagged as 'layout'">#layout</a> <a href="" class="quick-edit" title="Click to edit persons and tags for this story">quick edit</a></p></li>
+									<li><p><a href="" title="View stories for @gonzalocasas">@gonzalocasas</a> <a href="" title="View stories tagged as 'layout'">#layout</a> <a href="" class="quick-edit" title="Click to edit persons and tags for this story">quick edit</a></p></li>
 								</ul>
 							</div>
 						</div>
