--- a/templates/people.html
+++ b/templates/people.html
@@ -12,7 +12,7 @@
 
 <div id="session">
 	<ul>
-		<li class="account"><a href="" class="ok">&laquo; upgrade your account</a></li>
+		<li><a href="" class="ok">&laquo; upgrade your account</a></li>
 		<li><a href="">rodrigogalindez</a></li>
 		<li><a href="">people</a></li>
 		<li><a href="">project settings</a></li>
@@ -20,7 +20,7 @@
 	</ul>
 </div>
 
-<div id="wrapper">
+<div id="wrapper" class="span-12">
 	<h1><span class="editable" title="Click to edit">Polaris</span></h1>
 	
 	<div id="nav">
@@ -41,8 +41,7 @@
 		</div>
 		
 		<div id="content-wrapper">
-			<div id="left-content">
-				
+			<div class="col span-8">
 				<dl class="person">
 					<dt><img src="images/avatar.png" alt="Avatar" /></dt>
 					<dd><p><a href="">@pablomicolini</a><br />Pablo Micolini</p></dd>
@@ -62,7 +61,7 @@
 				</dl>
 			</div>
 			
-			<div id="sidebar">
+			<div class="col last span-4">
 				<div class="section">
 					<h3>Recent activity</h3>
 					
