--- a/templates/css/master.css
+++ b/templates/css/master.css
@@ -6,6 +6,8 @@
 	Author URI: http://www.rodrigogalindez.com
 */
 
+@import url(grid-960.css);
+
 /* ----------------------------------------------- [ * ] */
 
 * {
@@ -19,7 +21,7 @@ body {
 	font-family: Helvetica, Arial, Verdana, sans-serif;
 	font-size: 62.5%;
 /*	background: transparent url(../images/grid-1080.gif) repeat-y top center;*/
-/*	background: transparent url(../images/grid-960.gif) repeat-y top center;*/
+	background: transparent url(../images/grid-960.gif) repeat-y top center;
 	background-color: #fff;
 	color: #333;
 }
@@ -82,19 +84,32 @@ li p {
 	margin-bottom: 0;
 }
 
-input {
-	margin: .5em 0;
+input, textarea, select, option {
+	width: 97%;
 	padding: 2px;
+	margin: 0 0 .5em 0;
 	font-family: Monaco, "Courier New", fixed;
+	font-size: 1.2em;
+	line-height: 1.4;
 }
 
+select, option {
+	padding: 0;
+}
+
+label {
+	font-size: 1.3em;
+	line-height: 1.75;
+	font-weight: bold;
+}
+
+/* ----------------------------------------- [ Session ] */
+
 #session {
-/*	max-width: 108em;*/
-	max-width: 96em;
 	margin: 0 auto;
 	margin-bottom: 2em;
-	padding: .5em 0; /*check right margin*/
-	border-bottom: 1px dashed #ddd;
+	padding: .5em 1.5em;
+	border-bottom: 1px solid #eee;
 	overflow: hidden;
 }
 
@@ -112,7 +127,7 @@ input {
 	float: right;
 }
 
-#session li.account {
+#session li:first-child {
 	margin-left: 0;
 	float: left;
 }
@@ -126,27 +141,24 @@ input {
 	text-decoration: underline;
 }
 
+/* ----------------------------------------- [ Wrapper ] */
+
 #wrapper {
-/*	max-width: 108em;*/
-	max-width: 96em;
-	min-width: 76em;
 	margin: 0 auto;
-	padding: 0 2em; /*Check*/
+	padding: 0 2em;
 	clear: both;
 	overflow: hidden;
 }
 
-#wrapper h1 a {
-	text-decoration: none;
-}
+/* ---------------------------------------- [ Main Nav ] */
 
 #nav {
 	margin: 0 0 3em 0;
-	background: #F0F0F0;
+/*	background: #F0F0F0;*/
 	border: 1px solid #E0E0E0;
-/*	-moz-border-radius: 15px 15px 0 0;*/
 	clear: both;
 	overflow: hidden;
+	-moz-border-radius: 10px;
 }
 
 #nav ul {
@@ -171,7 +183,6 @@ input {
 }
 
 #nav li a:hover {
-	background: #fff;
 	border-right-color: #E0E0E0;
 	color: #000;
 }
@@ -180,10 +191,20 @@ input {
 	color: #000;
 }
 
+/* ----------------------------------- [ Inner Wrapper ] */
+
+#inner-wrapper {
+	clear: both;
+	overflow: hidden;
+}
+
+/* ------------------------------------- [ Page Header ] */
+
 #page-header {
 	padding: 0 0 1em 0;
 	margin: 0 0 2em 0;
 	border-bottom: 1px solid #ddd;
+	overflow: hidden;
 }
 
 #page-header ul {
@@ -208,27 +229,24 @@ input {
 	text-decoration: underline;
 }
 
-#sprint-stories {
-	width: 52.8em;
-	margin-right: 2.4em;
-	float: left;
+/* --------------------------------- [ Content Wrapper ] */
+
+#content-wrapper {
+	margin: 0 0 3em 0;
+	clear: both;
+	overflow: hidden;
 }
 
-/*Chequear min-width y max-width, es necesario? */
+/* Common Module */
 
-#product-stories {
-	width: 25.2em;
-	margin-right: 2.4em;
-	float: left;
-}
-
-#unplanned-stories {
-	max-width: 25.2em;
-	float: right;
+.module {
+	clear: both;
+	overflow: hidden;
 }
 
 .module-header {
-	margin: 0 0 1em 0;
+	padding: 0 0 .5em 0;
+	border-bottom: 1px dashed #ccc;
 	clear: both;
 	overflow: hidden;
 }
@@ -258,6 +276,8 @@ input {
 	text-decoration: underline;
 }
 
+/* Story */
+
 .story {
 	padding: 1em .5em;
 	border-bottom: 1px solid #ddd;
@@ -266,151 +286,131 @@ input {
 }
 
 .story:hover {
-/*	cursor: pointer;*/
+	background: #fff url(../images/bg-story.gif) repeat-x bottom left;
 }
 
-.story .meta {
-	width: 6.8em;
+.story-meta {
+	width: 5.8em;
+	overflow: hidden;
 	float: left;
 }
 
-.story .meta ul {
+.story-meta ul {
 	margin: 0;
 	list-style-type: none;
 }
 
-.story .meta li {
+.story-meta li {
 	margin: 0;
 	font-size: 1.3em;
 	text-align: center;
 }
 
-.story .meta li.priority {
+.story-meta li.priority {
 	font-size: 2.4em;
 	line-height: 1.3;
 }
 
-.story .meta li.priority a {
+.story-meta li.priority a {
 	color: #333;
 }
 
-.story .meta li.priority a:hover {
+.story-meta li.priority a:hover {
 	color: #2C7FA2;
 }
 
-.story .meta li a {
+.story-meta li a {
 	text-decoration: none;
 	color: #2C7FA2;
 }
 
-.story .meta li a:hover {
+.story-meta li a:hover {
 	text-decoration: underline;
 }
 
-.story .description {
-	margin-left: 9.2em;
+.story-description {
+	margin-left: 8.2em;
+	overflow: hidden;
 }
 
-.story .description .title h4 {
+.story-title h4 {
 	margin: 0;
 	line-height: 1.3;
 }
 
-/* Common sizes for tags and story titles */
-
-h4.x-small, a.x-small {
-	font-size: 1.1em;
-}
-
-h4.small, a.small {
-	font-size: 1.3em;
-}
-
-h4.medium, a.medium {
-	font-size: 1.6em;
-}
-
-h4.large, a.large {
-	font-size: 2em;
-}
-
-.story .description .details ul {
+.story-details ul {
 	margin: 0;
 	list-style-type: none;
 }
 
-.story .description .details li {
+.story-details li {
 	margin: 0;
 }
 
-.story .description .details li p {
+.story-details li p {
+	font-size: 1.1em;
 	line-height: 1.4;
 }
 
-.story .description .details li a {
+.story-details li a {
 	text-decoration: none;
 	color: #2C7FA2;
 }
 
-.story .description .details li.add-tags-button a {
+.story-details li.add-tags-button a {
 	color: #999;
 }
 
-.story .description .details li.add-tags-button a:hover {
+.story-details li.add-tags-button a:hover {
 	text-decoration: underline;
 }
 
-.story .description .details p {
+.story-details p {
 	margin: 0;
 }
 
-.story .description .details input {
+.story-details input {
 	width: 70%;
 }
 
 /*Forms*/
 
-table.common {
-	width: 100%;
-	margin: 0 0 1em 0;
-	border-collapse: collapse;
-}
-
-table.common tr {
+.field {
+/*	padding: 1em;*/
 	border-bottom: 1px solid #ddd;
+	clear: both;
+	overflow: hidden;
 }
 
-table.common tr:last-child {
+.field:last-child {
 	border: 0;
 }
 
-table.common th {
-/*	width: 25%;*/
-	padding: 1.3em;
-	text-align: left;
-	vertical-align: top;
+.field a {
+	color: #2C7FA2;
+	text-decoration: none;
 }
 
-table.common td {
-	padding: 1.3em;
+.field a:hover {
+	text-decoration: underline;
 }
 
-table.small th, table.small td {
-	padding: .5em;
-}
-
-table.common label {
+span.label {
 	font-size: 1.3em;
 	line-height: 1.75;
+	font-weight: bold;
 }
 
-table.common input, table.common textarea {
-	width: 95%;
-	margin: 0 0 .5em 0;
-	padding: 2px;
-	font-family: Monaco, "Courier New", fixed;
-	font-size: 1.2em;
-	line-height: 1.2;
+input.checkbox, input.radio {
+	display: block;
+	width: 12px;
+	margin: .3em .5em 0 0;
+	float: left;
+}
+
+label.checkbox, label.radio {
+	margin: 0 2.4em 0 0;
+	float: left;
 }
 
 p.tooltip {
@@ -420,53 +420,33 @@ p.tooltip {
 	color: #999;
 }
 
-input.submit {
-	width: auto !important;
-}
-
-table.common p.submit {
+p.submit {
 	margin-bottom: 0;
 }
 
-table.common p.submit a {
+p.submit a {
 	color: #2C7FA2;
 	text-decoration: none;
 }
 
-table.common p.submit a:hover {
+p.submit a:hover {
 	text-decoration: underline;
 }
 
-table.login tr {
-	border: 0;
+input.submit {
+	width: auto !important;
+	background: none !important;
 }
 
-/*Two columns*/
-
-/*#left-col {
-	width: 49%;
-	float: left;
-	clear: both;
-	overflow: hidden;
+.new-story {
+/*	padding: 1em;*/
+/*	border: 1px solid #ddd;*/
+/*	-moz-border-radius: 15px;*/
+/*	overflow: hidden;*/
 }
 
-#right-col {
-	margin-left: 51%;
-	overflow: hidden;
-}
-
-#first-col {
-	
-}*/
-
-#left-content {
-	width: 66%;
-	margin-right: 2.4em;
-	float: left;
-}
-
-#sidebar {
-	margin-left: 68.2%;
+.new-story input {
+	font-size: 1.7em;
 }
 
 .section {
@@ -523,12 +503,6 @@ dl.person a {
 
 dl.person a:hover {
 	text-decoration: underline;
-}
-
-#content-wrapper {
-	margin: 0 0 3em 0;
-	clear: both;
-	overflow: hidden;
 }
 
 #footer-wrapper {
@@ -622,4 +596,26 @@ dl.person a:hover {
 
 .quick-edit:hover {
 	text-decoration: underline !important;
+}
+
+/* Common sizes for tags and story titles */
+
+h4.x-small, a.x-small {
+	font-size: 1.1em;
+}
+
+h4.small, a.small {
+	font-size: 1.3em;
+}
+
+h4.medium, a.medium {
+	font-size: 1.6em;
+}
+
+h4.large, a.large {
+	font-size: 2em;
+}
+
+.hide {
+	display: none;
 }
